# sdf_font_tools

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  RELEASE.md  build.rs  justfile
.github/workflows/: build.yml  ci.yml  publish-macos.yml  publish-ubuntu.yml  publish.yml  test.yml
build_pbf_glyphs/: Cargo.toml  README.md
build_pbf_glyphs/src/: main.rs
pbf_font_tools/: Cargo.toml  LICENSE.txt  README.md  build.rs
pbf_font_tools/proto/: glyphs.proto
pbf_font_tools/src/: error.rs  ft_generate.rs  generate.rs  lib.rs  tools.rs
pbf_font_tools/src/proto/: mod.rs
pbf_font_tools/tests/: integration_tests.rs
pbf_font_tools/tests/glyphs/Open Sans Light/: 0-255.pbf
pbf_font_tools/tests/glyphs/SeoulNamsan L/: 0-255.pbf  LICENSE.txt
sdf_glyph_renderer/: Cargo.toml  README.md
sdf_glyph_renderer/benches/: benchmark_sdf.rs
sdf_glyph_renderer/fixtures/: glyph_alpha.json  glyph_sdf_f64.json  glyph_sdf_u8.json
sdf_glyph_renderer/src/: core.rs  error.rs  ft.rs  lib.rs  tests.rs
src/: error.rs  ft_generate.rs  generate.rs  glyphs.rs  lib.rs  main.rs  tools.rs
src/proto/: mod.rs
tests/: integration_tests.rs
tests/glyphs/Open Sans Light/: 0-255.pbf
tests/glyphs/SeoulNamsan L/: 0-255.pbf
