[package]
name = "pbf_font_tools"
version = "2.1.0"
authors = ["Ian Wagner <ian@stadiamaps.com>", "Luke Seelenbinder <luke@stadiamaps.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/stadiamaps/pbf_font_tools"
readme = "README.md"
description = "Tools for working with SDF font glyphs encoded in protobuf format."
keywords = ["sdf", "protobuf", "fonts"]
categories = ["encoding", "parsing", "rendering::data-formats"]
edition = "2021"

[features]
freetype = ["freetype-rs", "sdf_glyph_renderer/freetype"]

[dependencies]
futures = "0.3.14"
protobuf = "3.0.3"

[dependencies.tokio]
version = "1.12.0"
features = ["rt"]

[build-dependencies]
glob = "0.3.0"
protobuf-codegen = "3.0.3"
protoc-bin-vendored = "3.0.0"

[dependencies.freetype-rs]
version = "0.31.0"
optional = true

[dependencies.sdf_glyph_renderer]
#version = "0.3.0"
git = "https://github.com/stadiamaps/sdf_glyph_renderer"
branch = "upgrade-freetype"
optional = true

[dev-dependencies.tokio]
version = "1.12.0"
features = ["fs", "io-util", "macros", "rt"]
