[package]
name = "build_pbf_glyphs"
version = "1.3.0"
authors = ["Ian Wagner <ian@stadiamaps.com>", "Luke Seelenbinder <luke@stadiamaps.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/stadiamaps/build_pbf_glyphs"
readme = "README.md"
description = "A CLI utility for generating protobuf-encoded SDF font glyphs from original source fonts."
keywords = ["sdf", "protobuf", "fonts"]
categories = ["encoding", "parsing", "rendering::data-formats"]
edition = "2021"
exclude = [".github/"]

[dependencies]
clap = { version = "3.2.17", features = ["cargo"] }
num_cpus = "1.13.0"
protobuf = "3.0.3"
serde_json = "1.0.85"
spmc = "0.3.0"
pbf_font_tools = { version = "2.3.0", features = ["freetype"] }

tokio = { version = "1.21.0", features = ["fs", "rt-multi-thread", "macros"] }
