[package]
name = "build_pbf_glyphs"
version = "1.4.2"
description = "A CLI utility for generating protobuf-encoded SDF font glyphs from original source fonts."
readme = "README.md"
keywords = ["sdf", "protobuf", "fonts"]
categories = ["encoding", "parsing", "rendering::data-formats"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
num_cpus.workspace = true
pbf_font_tools.workspace = true
protobuf.workspace = true
serde_json.workspace = true
spmc.workspace = true
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
