[package]
name = "pbf_font_tools"
version = "2.3.0"
authors = ["Ian Wagner <ian@stadiamaps.com>", "Luke Seelenbinder <luke@stadiamaps.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/stadiamaps/pbf_font_tools"
readme = "README.md"
description = "Tools for working with SDF font glyphs encoded in protobuf format."
keywords = ["sdf", "protobuf", "fonts"]
categories = ["encoding", "parsing", "rendering::data-formats"]
edition = "2021"
exclude = [".github/"]

[features]
freetype = ["dep:sdf_glyph_renderer"]

[dependencies]
futures = "0.3.28"
protobuf = "3.2.0"
sdf_glyph_renderer = { version = "0.6.0", features = ["freetype"], optional = true }
thiserror = "1"
tokio = { version = "1.28.2", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "fs", "io-util", "macros"] }

[build-dependencies]
glob = "0.3.1"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
