[package]
name = "pbf_font_tools"
version = "2.5.0"
description = "Tools for working with SDF font glyphs encoded in protobuf format."
readme = "README.md"
keywords = ["sdf", "protobuf", "fonts"]
categories = ["encoding", "parsing", "rendering::data-formats"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
freetype = ["dep:sdf_glyph_renderer"]

[dependencies]
futures.workspace = true
protobuf.workspace = true
sdf_glyph_renderer = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros"] }

[build-dependencies]
glob.workspace = true
protobuf-codegen.workspace = true
protoc-bin-vendored.workspace = true
