[package]
name = "sdf_glyph_renderer"
version = "1.0.0"
description = "Tools for generating SDF font glyphs from bitmap images."
readme = "README.md"
keywords = ["sdf", "fonts", "glyphs"]
categories = ["rendering::data-formats", "graphics", "algorithms", "encoding"]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
freetype = ["dep:freetype-rs"]

[dependencies]
freetype-rs = { workspace = true, optional = true }
thiserror.workspace = true
